complete website animation and add media

--- a/worldskills/website/index.html
+++ b/worldskills/website/index.html
@@ -43,39 +43,39 @@
       <h2>Портфолио</h2>
       <div class="gallery">
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
 
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
 
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
 
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
 
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
 
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
 
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
 
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
 
         <div class="img-wrapper">
-          <img src="assets/img/placeholder.jpg" alt="image">
+          <img src="assets/img/placeholder.png" alt="image">
         </div>
       </div>
     </div>
