--- a/course/index.html
+++ b/course/index.html
@@ -14,7 +14,7 @@
 	<header class="header">
 		<div class="container">
 			<div class="header__inner">
-				<a class="logo" href="#">LOGO</a>
+				<a class="logo" href="#">WORK<span>FLOW</span></a>
 
 				<nav class="menu">
 					<ul>
