create hero structure

--- a/course/index.html
+++ b/course/index.html
@@ -27,6 +27,16 @@
 			</div>
 		</div>
 	</header>
+
+	<section class="hero">
+		<div class="container">
+			<div class="hero__inner">
+				<h1>Lorem ipsum dolor sit amet.</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere delectus molestias ad vel quibusdam fugiat
+					cum, voluptates esse, quasi corrupti quidem optio repellat beatae et.</p>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
