--- a/course/index.html
+++ b/course/index.html
@@ -7,14 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="dist/style.css">
 	<script defer src="dist/script.js"></script>
-	<title>Document</title>
+	<title>Workflow | Поиск для работы</title>
 </head>
 
 <body>
 	<header class="header">
 		<div class="container">
 			<div class="header__inner">
-				<a class="logo" href="#">WORK<span>FLOW</span></a>
+				<a class="logo" href="#">Work<span>flow</span></a>
 
 				<nav class="menu">
 					<ul>
@@ -31,7 +31,7 @@
 	<section class="hero">
 		<div class="container">
 			<div class="hero__inner">
-				<h1>Lorem ipsum dolor sit amet.</h1>
+				<h1>Работа мечты здесь</h1>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere delectus molestias ad vel quibusdam fugiat
 					cum, voluptates esse, quasi corrupti quidem optio repellat beatae et.</p>
 			</div>
