--- a/course/index.html
+++ b/course/index.html
@@ -32,9 +32,39 @@
 		<div class="container">
 			<div class="hero__inner">
 				<h1>Работа мечты здесь</h1>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere delectus molestias ad vel quibusdam fugiat
+				<p class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere delectus molestias ad vel
+					quibusdam fugiat
 					cum, voluptates esse, quasi corrupti quidem optio repellat beatae et.</p>
 			</div>
+		</div>
+	</section>
+
+	<section class="about container">
+		<div class="about__inner">
+			<h2>О сервисе</h2>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere delectus molestias ad vel quibusdam fugiat cum,
+				voluptates esse, quasi corrupti quidem optio repellat beatae et. Lorem ipsum dolor sit amet consectetur
+				adipisicing elit. Facere delectus molestias ad vel quibusdam fugiat cum, voluptates esse, quasi corrupti quidem
+				optio repellat beatae et.
+			</p>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere delectus molestias ad vel quibusdam fugiat cum,
+				voluptates esse, quasi corrupti quidem optio repellat beatae et. Lorem ipsum dolor sit amet consectetur
+				adipisicing elit. Facere delectus molestias ad vel quibusdam fugiat cum, voluptates esse, quasi corrupti quidem
+				optio repellat beatae et.
+			</p>
+		</div>
+	</section>
+
+	<section class="feedback container">
+		<div class="feedback__inner">
+			<h2>Мы поможем</h2>
+			<form action="#" method="POST">
+				<input type="text" placeholder="Имя">
+				<input type="text" placeholder="Почта">
+				<textarea placeholder="Сообщение"></textarea>
+			</form>
 		</div>
 	</section>
 </body>
