modify logo & create footer

--- a/course/index.html
+++ b/course/index.html
@@ -67,6 +67,10 @@
 			</form>
 		</div>
 	</section>
+
+	<footer class="footer container">
+		<p>© 2023 WORKFLOW. Все права защищены. Разработан THELABUZOV</p>
+	</footer>
 </body>
 
 </html>
