--- a/course/index.html
+++ b/course/index.html
@@ -39,6 +39,52 @@
 		</div>
 	</section>
 
+	<section class="job container">
+		<div class="job__inner">
+
+			<a class="job__item" href="#">
+				<h3 class="job__title">Frontend Developer</h3>
+				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
+			</a>
+
+			<a class="job__item" href="#">
+				<h3 class="job__title">Backend Developer</h3>
+				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
+			</a>
+
+			<a class="job__item" href="#">
+				<h3 class="job__title">Fullstack Developer</h3>
+				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
+			</a>
+
+			<a class="job__item" href="#">
+				<h3 class="job__title">UI/UX Designer</h3>
+				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
+			</a>
+
+			<a class="job__item" href="#">
+				<h3 class="job__title">Frontend Developer</h3>
+				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
+			</a>
+
+			<a class="job__item" href="#">
+				<h3 class="job__title">Backend Developer</h3>
+				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
+			</a>
+
+			<a class="job__item" href="#">
+				<h3 class="job__title">Fullstack Developer</h3>
+				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
+			</a>
+
+			<a class="job__item" href="#">
+				<h3 class="job__title">UI/UX Designer</h3>
+				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
+			</a>
+
+		</div>
+	</section>
+
 	<section class="about container">
 		<div class="about__inner">
 			<h2>О сервисе</h2>
@@ -59,20 +105,20 @@
 
 	<section class="feedback">
 		<div class="container">
-			<div class="feedback__inner">
-				<h2>Мы поможем</h2>
-				<form action="#" method="POST">
-					<label for="name">Введите имя:
-						<input type="text" id="name" name="name" placeholder="Имя">
-					</label>
-					<label for="email">Введите почту:
-						<input type="text" id="email" name="email" placeholder="Почта">
-					</label>
-					<label for="message">Введите сообщение:
-						<textarea id="message" name="message" placeholder="Сообщение"></textarea>
-					</label>
-				</form>
-			</div>
+			<h2>Мы поможем</h2>
+		</div>
+		<div class="feedback__inner">
+			<form action="#" method="POST">
+				<label for="name">Введите имя:
+					<input type="text" id="name" name="name" placeholder="Имя">
+				</label>
+				<label for="email">Введите почту:
+					<input type="text" id="email" name="email" placeholder="Почта">
+				</label>
+				<label for="message">Введите сообщение:
+					<textarea id="message" name="message" placeholder="Сообщение"></textarea>
+				</label>
+			</form>
 		</div>
 	</section>
 
