create worker page

--- a/course/index.html
+++ b/course/index.html
@@ -42,42 +42,42 @@
 	<section class="job container">
 		<div class="job__inner">
 
-			<a class="job__item" href="#">
+			<a class="job__item" href="job.html">
 				<h3 class="job__title">Frontend Developer</h3>
 				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
 			</a>
 
-			<a class="job__item" href="#">
+			<a class="job__item" href="job.html">
 				<h3 class="job__title">Backend Developer</h3>
 				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
 			</a>
 
-			<a class="job__item" href="#">
+			<a class="job__item" href="job.html">
 				<h3 class="job__title">Fullstack Developer</h3>
 				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
 			</a>
 
-			<a class="job__item" href="#">
+			<a class="job__item" href="job.html">
 				<h3 class="job__title">UI/UX Designer</h3>
 				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
 			</a>
 
-			<a class="job__item" href="#">
+			<a class="job__item" href="job.html">
 				<h3 class="job__title">Frontend Developer</h3>
 				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
 			</a>
 
-			<a class="job__item" href="#">
+			<a class="job__item" href="job.html">
 				<h3 class="job__title">Backend Developer</h3>
 				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
 			</a>
 
-			<a class="job__item" href="#">
+			<a class="job__item" href="job.html">
 				<h3 class="job__title">Fullstack Developer</h3>
 				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
 			</a>
 
-			<a class="job__item" href="#">
+			<a class="job__item" href="job.html">
 				<h3 class="job__title">UI/UX Designer</h3>
 				<p class="job__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, molestias?</p>
 			</a>
