--- a/course/job.html
+++ b/course/job.html
@@ -14,14 +14,13 @@
   <header class="header">
     <div class="container">
       <div class="header__inner">
-        <a class="logo" href="#">Work<span>flow</span></a>
+        <a class="logo" href="index.html">Work<span>flow</span></a>
 
         <nav class="menu">
           <ul>
-            <li><a href="#">Главная</a></li>
+            <li><a href="#">Вакансии</a></li>
             <li><a href="#">О сервисе</a></li>
             <li><input type="text" placeholder="Поиск"></li>
-            <li><a href="#">Помощь</a></li>
           </ul>
         </nav>
       </div>
