create account btn & change animation

--- a/course/index.html
+++ b/course/index.html
@@ -21,8 +21,8 @@
 					<li><a href="#">Помощь</a></li>
 					<li><input type="text" placeholder="Поиск"></li>
 					<li>
-						<button class="btn">
-							<img src="images/tools/account.svg" alt="account">Войти
+						<button class="btn">Вход
+							<img src="images/tools/account.svg" alt="account">
 						</button>
 					</li>
 				</ul>
