add account login script

--- a/course/index.html
+++ b/course/index.html
@@ -17,14 +17,14 @@
 			<a class="close" href="#">&times;</a>
 
 			<h2>Регистрация</h2>
-			<form action="check.php" method="post">
+			<form action="php/check.php" method="post">
 				<input type="email" class="form-control" name="email" id="email" placeholder="Введите почту">
 				<input type="password" class="form-control" name="password" id="password" placeholder="Введите пароль">
 				<button type="submit" class="btn">Регистрация</button>
 			</form>
 
 			<h2>Вход</h2>
-			<form action="auth.php" method="post">
+			<form action="php/auth.php" method="post">
 				<input type="email" class="form-control" name="email" id="email" placeholder="Введите почту">
 				<input type="password" class="form-control" name="password" id="password" placeholder="Введите пароль">
 				<button type="submit" class="btn">Вход</button>
